--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>ECommerce</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
+  <link rel="preconnect" href="https://fonts.gstavscode-file://vscode-app/c:/Users/Mohamed/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-sandbox/workbench/workbench.htmltic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
